Bug 434099 - Falkon seems to lack settings (QWebEngineUrlScheme)
Summary: Falkon seems to lack settings (QWebEngineUrlScheme)
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-07 10:45 UTC by Klaus-Dieter Fietze
Modified: 2023-07-24 22:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.0
Sentry Crash Report:


Attachments
Error messages on Terminal (8.40 KB, text/plain)
2021-03-07 10:45 UTC, Klaus-Dieter Fietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Klaus-Dieter Fietze 2021-03-07 10:45:45 UTC
Created attachment 136453 [details]
Error messages on Terminal

SUMMARY
When Falkon is the default web browser it does open web pages that are requested from a terminal but produces loads of error messages.

STEPS TO REPRODUCE
1. set Falkon to be the default browser:
System settings –> Applications –> Default Applications –> Web browser –> Falkon
2. open a terminal window and enter: “xdg-open https://kde.org/”

OBSERVED RESULT
The requested web page opens but the terminal window full of error messages (see attachment).

EXPECTED RESULT
When I set Firefox to be the default web browser the requested web page opens without any delay and without error messages.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20210302
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.10.16-1-default
OS Type: 64-bit
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-7700T CPU @ 2.90GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 630

ADDITIONAL INFORMATION
When clicking on an url in an open Falkon web page it works fine, of course, I cannot see potential error messages.

Thank you for looking into this bug.
Best regards,
Klaus
Comment 1 Juraj 2021-03-08 20:09:37 UTC
This is caused by QtWebEngine changing its behaviour.
Now all the schemes has to be registered before any QtWebEngine class is instanced thus making the current way how plugins are initialized obsolete.
Thus printing all those warnings.

The Falkon built ones can be easily adjusted (and I believe they were) and the plugins are a bit different story since it requires abit more work which noone has done so far.

I have somewhere separate report for this, but lets mark this confirmed for now and hope for a good luck.
Comment 2 Bug Janitor Service 2023-04-06 22:10:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/48
Comment 3 Juraj 2023-07-24 22:20:42 UTC
Git commit 205018775ce1c66b349d6b5a20abcb08e5ed19f6 by Juraj Oravec.
Committed on 25/07/2023 at 00:04.
Pushed by jurajo into branch 'master'.

Add support for custom url schemes
FIXED_IN: 23.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +3    -0    src/lib/CMakeLists.txt
M  +15   -0    src/lib/app/mainapplication.cpp
M  +2    -0    src/lib/app/mainapplication.h
M  +2    -0    src/lib/other/qzsettings.cpp
M  +3    -0    src/lib/other/qzsettings.h
M  +8    -0    src/lib/preferences/preferences.cpp
M  +1    -0    src/lib/preferences/preferences.h
M  +144  -91   src/lib/preferences/preferences.ui
A  +143  -0    src/lib/preferences/schememanager.cpp     [License: GPL (v3+)]
A  +52   -0    src/lib/preferences/schememanager.h     [License: GPL (v3+)]
A  +191  -0    src/lib/preferences/schememanager.ui
M  +25   -4    src/plugins/KDEFrameworksIntegration/kdeframeworksintegrationplugin.cpp

https://invent.kde.org/network/falkon/-/commit/205018775ce1c66b349d6b5a20abcb08e5ed19f6
Comment 4 Juraj 2023-07-24 22:25:32 UTC
Git commit 8819fbf0081a8a0ddffa961947405c347a514d93 by Juraj Oravec.
Committed on 25/07/2023 at 00:23.
Pushed by jurajo into branch 'release/23.08'.

Add support for custom url schemes
FIXED_IN: 23.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +3    -0    src/lib/CMakeLists.txt
M  +15   -0    src/lib/app/mainapplication.cpp
M  +2    -0    src/lib/app/mainapplication.h
M  +2    -0    src/lib/other/qzsettings.cpp
M  +3    -0    src/lib/other/qzsettings.h
M  +8    -0    src/lib/preferences/preferences.cpp
M  +1    -0    src/lib/preferences/preferences.h
M  +144  -91   src/lib/preferences/preferences.ui
A  +143  -0    src/lib/preferences/schememanager.cpp     [License: GPL (v3+)]
A  +52   -0    src/lib/preferences/schememanager.h     [License: GPL (v3+)]
A  +191  -0    src/lib/preferences/schememanager.ui
M  +25   -4    src/plugins/KDEFrameworksIntegration/kdeframeworksintegrationplugin.cpp

https://invent.kde.org/network/falkon/-/commit/8819fbf0081a8a0ddffa961947405c347a514d93