Add support for custom url schemes

BUG: 434099
FIXED_IN: 23.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>